@@ -1718,7 +1718,9 @@ int msShapefileWhichShapes(shapefileObj *shpfile, rectObj rect, int debug)
   int i;
   rectObj shaperect;
   char *filename;
-
+  char *sourcename = 0; /* shape file source string from map file */
+  char *s = 0; /* pointer to start of '.shp' in source string */
+  
   if(shpfile->status) {
     free(shpfile->status);
     shpfile->status = NULL;
@@ -1736,17 +1738,27 @@ int msShapefileWhichShapes(shapefileObj *shpfile, rectObj rect, int debug)
       msSetError(MS_MEMERR, NULL, "msShapefileWhichShapes()");
       return(MS_FAILURE);
     }
-    for(i=0;i<shpfile->numshapes;i++) 
+    for(i=0;i<shpfile->numshapes;i++) {
       msSetBit(shpfile->status, i, 1);
-  } else {
-    if((filename = (char *)malloc(strlen(shpfile->source)+strlen(MS_INDEX_EXTENSION)+1)) == NULL) {
+    }
+  } 
+  else {
+
+    /* deal with case where sourcename is of the form 'file.shp' */
+    sourcename = strdup(shpfile->source);
+    s = strcasestr(sourcename, ".shp");
+    if( s ) *s = '\0';
+
+    if((filename = (char *)malloc(strlen(sourcename)+strlen(MS_INDEX_EXTENSION)+1)) == NULL) {
       msSetError(MS_MEMERR, NULL, "msShapefileWhichShapes()");    
       return(MS_FAILURE);
     }
-    sprintf(filename, "%s%s", shpfile->source, MS_INDEX_EXTENSION);
+  
+    sprintf(filename, "%s%s", sourcename, MS_INDEX_EXTENSION);
     
     shpfile->status = msSearchDiskTree(filename, rect, debug);
     free(filename);
+    free(sourcename);
 
     if(shpfile->status) { /* index  */
       msFilterTreeSearch(shpfile, shpfile->status, rect);
